--- a/index.html
+++ b/index.html
@@ -12,55 +12,66 @@
 </head>
 
 <body>
-    <header>
-        <p>This is our header</p>
-    </header>
-    <main>
-        <section class="padded">
-            <h3 class="centered-heading">H3 subtitle</h3>
-            <h1 class="centered-heading">Main page title</h1>
-            <h2 class="centered-heading">Page subtitle</h2>
-            <div id="links">
-                <p>Links here:</p>
-                <a href="https://google.com">Link to google</a>
-                <br>
-                <a href="login.html">Login Page</a>
-                <br>
-                <a href="data.html">Data page</a>
-                <br>
-                <a href="form.html">Form Page</a>
-
-            </div>
-            <p>List:</p>
-            <ul id="ulist">
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-                <li>Item 5</li>
-            </ul>
-            <button type="button">Send</button>
-            <button disabled="true">Disabled</button>
-            <input type="text">
-            <input type="checkbox">
-            <input type="date">
-            <!-- <div>
-                    <span class="blocky-span">Test text 1</span>
-                    <span class="blocky-span">Test text 2</span>
-                </div> -->
-            <div class="parent">
-                <div class="weird-divs">Div content 1</div>
-                <div class="weird-divs">Div content 2</div>
-            </div>
-            <br>
-            <button id="finish-btn">
-                Finish
-            </button>
-        </section>
-    </main>
-    <footer>
-        <p>End of website.</p>
-    </footer>
+    <div id="body-container">
+        <header>
+          <p>This is our header</p>
+        </header>
+        <div class="main-container">
+            <aside class="sidebar">
+                <p>Item 1</p>
+                <p>Item 2</p>
+                <p>Item 3</p>
+                <p>Item 4</p>
+                <p>Item 5</p>
+            </aside>
+            <main>
+                <section class="padded">
+                    <h3 class="centered-heading">H3 subtitle</h3>
+                    <h1 class="centered-heading">Main page title</h1>
+                    <h2 class="centered-heading">Page subtitle</h2>
+                    <div id="links">
+                        <p>Links here:</p>
+                        <a href="https://google.com">Link to google</a>
+                        <br>
+                        <a href="login.html">Login Page</a>
+                        <br>
+                        <a href="data.html">Data page</a>
+                        <br>
+                        <a href="form.html">Form Page</a>
+        
+                    </div>
+                    <p>List:</p>
+                    <ul id="ulist">
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                        <li>Item 4</li>
+                        <li>Item 5</li>
+                    </ul>
+                    <button type="button">Send</button>
+                    <button disabled="true">Disabled</button>
+                    <input type="text">
+                    <input type="checkbox">
+                    <input type="date">
+                    <!-- <div>
+                            <span class="blocky-span">Test text 1</span>
+                            <span class="blocky-span">Test text 2</span>
+                        </div> -->
+                    <div class="parent">
+                        <div class="weird-divs">Div content 1</div>
+                        <div class="weird-divs">Div content 2</div>
+                    </div>
+                    <br>
+                    <button id="finish-btn">
+                        Finish
+                    </button>
+                </section>
+            </main>
+        </div>
+        <footer>
+            <p>End of website.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
